@@ -1,5 +1,10 @@
 package com.capstone.pin.service;
 
+import com.capstone.member.dto.CreateMemberRequest;
+import com.capstone.member.entity.Member;
+import com.capstone.member.enums.MemberRole;
+import com.capstone.member.service.MemberCacheService;
+import com.capstone.member.service.MemberService;
 import com.capstone.pin.dto.*;
 import com.capstone.pin.entity.Pin;
 import com.capstone.pin.repository.PinRepository;
@@ -21,6 +26,8 @@ public class PinService {
 
     private final PinRepository pinRepository;
     private final UserCacheService userCacheService;
+    private final MemberCacheService memberCacheService;
+    private final MemberService memberService;
 
     /** 핀 생성 */
     @Transactional
@@ -32,15 +39,21 @@ public class PinService {
         // 핀 생성
         Pin pin = Pin.builder()
                 .title(request.getTitle())
-                .description(request.getDescription())
+                .address(request.getAddress())
                 .latitude(request.getLatitude())
                 .longitude(request.getLongitude())
-                .user(user)
                 .notificationRadius(request.getNotificationRadius())
                 .currentMemberCount(1)
                 .build();
 
         Pin savedPin = pinRepository.save(pin);
+
+        CreateMemberRequest createMemberRequest = CreateMemberRequest.builder()
+                .pinId(savedPin.getId())
+                .build();
+
+        memberService.createMember(userId, createMemberRequest);
+        
         log.info("핀 생성 성공: pinId={}, userId={}", savedPin.getId(), userId);
 
         return PinInfo.fromEntity(savedPin);
@@ -55,15 +68,10 @@ public class PinService {
 
     /** 사용자의 핀 목록 조회 */
     public List<PinInfo> getUserPins(Long userId) {
-        List<Pin> pins = pinRepository.findByUserId(userId);
-        return pins.stream()
-                .map(PinInfo::fromEntity)
-                .collect(Collectors.toList());
-    }
-
-    /** 모든 핀 조회 */
-    public List<PinInfo> getAllPins() {
-        List<Pin> pins = pinRepository.findAll();
+        List<Member> members = memberCacheService.getMembersByUserId(userId);
+        List<Pin> pins = members.stream()
+                .map(Member::getPin)
+                .toList();
         return pins.stream()
                 .map(PinInfo::fromEntity)
                 .collect(Collectors.toList());
@@ -73,13 +81,20 @@ public class PinService {
     @Transactional
     public PinInfo updatePin(Long userId, Long pinId, UpdatePinRequest request) {
         // 핀 조회 및 권한 확인
-        Pin pin = pinRepository.findByIdAndUserId(pinId, userId)
+        Member owner = memberCacheService.getMemberByPinIdAndUserId(pinId, userId)
+                .orElseThrow(() -> new IllegalArgumentException("핀을 찾을 수 없거나 수정 권한이 없습니다."));
+
+        if (owner.getRole() != MemberRole.OWNER) {
+            throw new IllegalArgumentException("핀 수정 권한이 없습니다.");
+        }
+
+        Pin pin = pinRepository.findById(pinId)
                 .orElseThrow(() -> new IllegalArgumentException("핀을 찾을 수 없거나 수정 권한이 없습니다."));
 
         // 핀 정보 수정
         pin.updatePin(
                 request.getTitle(),
-                request.getDescription(),
+                request.getAddress(),
                 request.getLatitude(),
                 request.getLongitude(),
                 request.getNotificationRadius()
@@ -95,29 +110,18 @@ public class PinService {
     @Transactional
     public void deletePin(Long userId, Long pinId) {
         // 핀 조회 및 권한 확인
-        Pin pin = pinRepository.findByIdAndUserId(pinId, userId)
+        Member owner = memberCacheService.getMemberByPinIdAndUserId(pinId, userId)
+                .orElseThrow(() -> new IllegalArgumentException("핀을 찾을 수 없거나 삭제 권한이 없습니다."));
+
+        if (owner.getRole() != MemberRole.OWNER) {
+            throw new IllegalArgumentException("핀 삭제 권한이 없습니다.");
+        }
+
+        Pin pin = pinRepository.findById(pinId)
                 .orElseThrow(() -> new IllegalArgumentException("핀을 찾을 수 없거나 삭제 권한이 없습니다."));
 
         pinRepository.delete(pin);
         log.info("핀 삭제 성공: pinId={}, userId={}", pinId, userId);
-    }
-
-    /** 특정 위치 근처의 핀 조회 */
-    public List<PinInfo> getPinsNearLocation(Double latitude, Double longitude, Double radiusKm) {
-        // 간단한 경계 박스 계산 (1도 ≈ 111km)
-        Double latDelta = radiusKm / 111.0;
-        Double lonDelta = radiusKm / (111.0 * Math.cos(Math.toRadians(latitude)));
-
-        List<Pin> pins = pinRepository.findPinsNearLocation(
-                latitude - latDelta,
-                latitude + latDelta,
-                longitude - lonDelta,
-                longitude + lonDelta
-        );
-
-        return pins.stream()
-                .map(PinInfo::fromEntity)
-                .collect(Collectors.toList());
     }
 
 }
